--- a/typo3conf/ext/armpackage/Resources/Private/Language/locallang_db.xlf
+++ b/typo3conf/ext/armpackage/Resources/Private/Language/locallang_db.xlf
@@ -105,6 +105,15 @@
 			<trans-unit id="tx_armpackage_list.description">
 				<source>Package list</source>
 			</trans-unit>
+                        <trans-unit id="tx_armpackage_domain_model_studentemail">
+				<source>Student Email</source>
+			</trans-unit>
+                        <trans-unit id="tx_armpackage_domain_model_studentemail.feuser">
+				<source>Web User (Dealer)</source>
+			</trans-unit>
+                        <trans-unit id="tx_armpackage_domain_model_studentemail.email">
+				<source>Email</source>
+			</trans-unit>
 		</body>
 	</file>
 </xliff>
